# CMOR438

./: LICENSE  README.md  main.py  neuron.ipynb  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
Supervised Learning/: README.md
src/: GradientDescent.ipynb  KNN_personalized.py  knn.ipynb  knn_README.md
src/my_sample_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rice_ml/: __init__.py  basic_functions.py
tests/: test_basic_functions.py
