[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-sample-project"
version = "0.1.0"
description = "A sample project demonstrating pyproject.toml"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy >=1.26",
    "matplotlib >=3.8",
    "pandas >=2.0",
    "pytest >=8.0",
    "seaborn", "requests"
]



[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]